# Ai-Finance

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.backup  Dockerfile.dev  Dockerfile.jupyter  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml  test_basic_functionality.py
docker/backup/: backup.py
docker/nginx/: nginx.conf
docker/nginx/ssl/: cert.pem  key.pem
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
docker/scripts/: backup.sh  clean.sh  start-dev.sh  start.sh  stop.sh
exports/: finance_20250904_184145.xlsx  finance_export_20250904_184114.xlsx  finance_export_20250904_184127.xlsx  transactions_export_20250904_184107.csv
reports/: detailed_20250904_183038.txt  detailed_20250904_183249.txt  detailed_20250904_183447.txt  summary_20250904_183038.txt  summary_20250904_183249.txt  summary_20250904_183447.txt  transactions_20250904_183249.csv
src/: __init__.py
src/analytics/: __init__.py  chart_generator.py  report_generator.py
src/cli/: __init__.py  main.py
src/config/: __init__.py  settings.py  user_config.yaml.example
src/core/: __init__.py
src/core/calculators/: __init__.py  balance_calculator.py  budget_calculator.py  statistics_calculator.py
src/core/models/: __init__.py  budget.py  category.py  transaction.py  user.py
src/data/database/: __init__.py  database_manager.py  initializer.py  models.py
src/data/import_export/: __init__.py  exporter.py  importer.py
src/services/: __init__.py  budget_service.py  category_service.py  transaction_service.py  user_service.py
src/ui/: __init__.py  dashboard.py  dialogs.py  main_window.py  widgets.py
tests/: __init__.py  test_models.py
